--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "swiper": "^11.1.14",
     "vue": "^3.5.8",
     "vue-router": "latest",
-    "vuetify": "^3.7.0-beta.1"
+    "vuetify": "^3.7.0-beta.1",
+    "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
     "@nuxt/icon": "^1.5.1",
